--- a/ConfigClient.yml
+++ b/ConfigClient.yml
@@ -1,10 +1,12 @@
+spring:
+  application:
+    name: ConfigClient
+
+
 server:
   port: 8085
-  
-spring:
- applicaiton:
-    name: ConfigClient
-    
+
+
 management:
   endpoints:
     web:
