--- a/ConfigClient-dev.yml
+++ b/ConfigClient-dev.yml
@@ -1,14 +1,14 @@
-welcome:
-  message: welcome to dev environment!!!
 
 management:
   endpoints:
     web:
       exposure:
         include: "*"
-  endpoint:
-    health:
-      show-details: always
+  security:
+    enabled: false
+welcome:
+  message: welcome to default environment
+
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
@@ -22,6 +22,9 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
     show-sql: true
+    
+  application:
+    name: ConfigClient
 
   boot:
     admin:
