--- a/ConfigClient-dev.yml
+++ b/ConfigClient-dev.yml
@@ -7,7 +7,7 @@ management:
   security:
     enabled: false
 welcome:
-  message: welcome to default environment from config sever
+  message: welcome to default environment from config sever!!!
 
 spring:
   datasource:
