--- a/ConfigClient-dev.yml
+++ b/ConfigClient-dev.yml
@@ -1,5 +1,5 @@
 
 welcome:
-  message: welcome to default environment from config sever!!!
+  message: welcome to default environment from git config sever
 
 
